[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["i544c <leo@i544c.me>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^1.9.3"

[tool.poetry.dev-dependencies]
functions-framework = "^1.5.0"
isort = "^5.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
